# rafting-button

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  platformio.ini  rafting-button.code-workspace
.github/workflows/: doxygen.yml
code/: .gitignore  README.md  install-idf.sh
code/dynamic-neighbors/: CMakeLists.txt  README.md  dynamic-neighbors.code-workspace  sdkconfig
code/esp-now-parameters/: .gitignore  CMakeLists.txt  README.md  esp-now-parameters.code-workspace  sdkconfig
code/hello-world/: README.md
code/measure-esp-now/: CMakeLists.txt  measure-esp-now.code-workspace  sdkconfig
code/measure-esp-now/main/: CMakeLists.txt  idf_component.yml  measure-esp-now.c  measure-esp-now.h
code/rafting-button/: .gitignore  README.md  rafting-button.code-workspace  sdkconfig
code/simulation/: .gitignore  Makefile  README.md  get_mean.py  main.c  main.h  visualize.py  visualizeA.py  visualizeB.py  visualizeC.py  (+6 more)
docs/: definice-funkci-a-pozadavku-na-system.md  schema.md  volba-modulu.md
graphs/: LPWAN.py
measure/: README.md  data2graph.py
samostatny-projekt/: CHANGELOG.md  platformio.ini
slideshow/: slideshow.md
src/: LCD096.cpp  LCD096.h  board.h  callback.h  letters.h  main.cpp  main.h  utils.cpp  utils.h
thesis/: .gitignore  README.md  ctustyle-doc.fdb_latexmk  ctustyle-doc.fls  ctustyle-doc.ref  ctustyle-doc.tex  ctustyle3.tex  ctuth-core.tex  ctuth-names.tex  ctuth-pkg.tex  ctuth-templates.tex  ctuthesis-1.tex  ctuthesis-2.tex  ctuthesis.cls  ctuthesis.fdb_latexmk  ctuthesis.fls  ctuthesis.tex  latexmkrc  mybase.bib  prilohy.tex  texloop.sh
(+210 files in other folders)
